--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd-mobile": "^5.5.1",
     "axios": "^0.26.1",
     "next": "12.1.0",
     "react": "17.0.2",
